// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package lab;
option go_package = "chromium.googlesource.com/enterprise/cel/go/schema/lab";

import "schema/common/validation.proto";
import "schema/asset/asset_manifest.proto";
import "schema/host/host_environment.proto";

// The expanded asset manifest and lab metadata.
message Lab {
  string generation_id = 1 [(common.v).type = OUTPUT];
  host.HostEnvironment host_environment = 2 [(common.v).type = OUTPUT];
  asset.AssetManifest asset_manifest = 3 [(common.v).type = OUTPUT];
}
